--- a/MultiLenguaje/src/app/app.component.css
+++ b/MultiLenguaje/src/app/app.component.css
@@ -1,13 +1,27 @@
 .sidebar-wrapper {
     display: block;
     box-sizing: border-box;
-    width: 100px;
+    width: 150px;
     background: #eff2f7;
     float: left;
-    padding: 8px;
+    padding: 15px;
     height: calc(100vh - 175px);
     border-top: 1px solid #d3dce6;
     border-right: 1px solid #d3dce6;
+}
+
+.mat-row{
+  height: auto;
+}
+
+.mat-cell{
+  padding: 8px 8px 8px 0;
+}
+
+th {
+  background-color: #04AA6D;
+  font-size: x-large;
+  color: white;
 }
 
 .lineIndicator{
